Criada a página de cadastro

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Ecoleta</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-	
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<script type="text/javascript"></script>
+	<link rel="stylesheet" type="text/css" href="CSS/main.css">
+	<link rel="stylesheet" type="text/css" href="CSS/home.css">
+	<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
 </head>
 <body>
 	<div id="page-home">
@@ -14,7 +16,7 @@
 	<div class="content">
 		<header>
 			<img src="icones/logo.svg" alt="Logomarca">
-			<a href="#">
+			<a href="cadastro.html">
 				<span></span>
 				Cadastre um ponto de coleta</a>
 		</header>
