Conclusão do front-end

--- a/cadastro.html
+++ b/cadastro.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 	<script type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
-	<link rel="stylesheet" type="text/css" href="cadastro.css">
+	<link rel="stylesheet" type="text/css" href="CSS/cadastro.css">
 	<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
 </head>
 <body>
@@ -28,31 +28,32 @@
 						<h2>Dados da entidade</h2>		
 					</legend>
 					<div class="field" id="field1">
-						<label for="name">Nome da entidade</label>
-						<input type="text" name="name">
+						<label for="name">Nome da entidade <span id="required">*</span></label>
+						<input type="text" name="name" required>
 					</div>
 					<div class="field-group" id="field2">
 						<div class="field">
-						<label for="endereco">Endereço</label>
-						<input type="text" name="endereco">
+						<label for="endereco">Endereço <span id="required">*</span></label>
+						<input type="text" name="endereco" required>
 						</div>
 						<div class="field">
-						<label for="numero">Número/Complemento</label>
-						<input type="text" name="numero">
+						<label for="numero">Número/Complemento <span id="required">*</span></label>
+						<input type="text" name="numero" required>
 						</div>
 					</div>
 					<div class="field-group">
 						<div class="field">
-						<label for="estado">Estado</label>
-						<select name="estado">
-							<option value="0">Selecione o Estado</option>
-							
+						<label for="estado">Estado <span id="required">*</span></label>
+						<select name="estado" required>
+							<option value="">Selecione o Estado</option>
 						</select>
+
+						<input type="hidden" name="state" value="">
 						</div>
 						<div class="field">
-						<label for="cidade">Cidade</label>
-						<select name="cidade" disabled>
-							<option>Selecione a Cidade</option>
+						<label for="cidade">Cidade <span id="required">*</span></label>
+						<select name="cidade" disabled required>
+							<option disabled selected value="">Selecione a Cidade</option>
 						</select>
 						</div>
 						
@@ -63,6 +64,33 @@
 					<legend>
 						<h2>Itens de coleta</h2>		
 					</legend>	
+					<div class="itens-grid">
+						<li data-id="1">
+							<img src="icones/lampadas.svg" alt="lampadas">
+							<span>Lâmpadas</span>
+						</li>
+						<li data-id="2">
+							<img src="icones/baterias.svg" alt="Pilhas e Baterias">
+							<span>Pilhas e Baterias</span>
+						</li>
+						<li data-id="3">
+							<img src="icones/papeis-papelao.svg" alt="Papéis e Papelão">
+							<span>Papéis e Papelão</span>
+						</li>
+						<li data-id="4">
+							<img src="icones/eletronicos.svg" alt="Resíduos Eletrônicos">
+							<span>Resíduos Eletrônicos</span>
+						</li>
+						<li data-id="5">
+							<img src="icones/organicos.svg" alt="Resíduos Orgânicos">
+							<span>Resíduos Orgânicos</span>
+						</li>
+						<li data-id="6">
+							<img src="icones/oleo.svg" alt="Óleo">
+							<span>Óleo de Cozinha</span>
+						</li>
+					</div>
+					<input type="hidden" name="items" value="">
 				</fieldset>
 
 				<button type="submit">Cadastrar ponto de coleta</button>
@@ -72,6 +100,6 @@
 </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script type="text/javascript" src="JS/cadastro.js"></script>
+	<script type="text/javascript" src="JS/home.js"></script>
 </body>
 </html>
