--- a/resultadoBusca.html
+++ b/resultadoBusca.html
@@ -7,48 +7,48 @@
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 	<script type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="CSS/main.css">
-	<link rel="stylesheet" type="text/css" href="CSS/home.css">
-	<link rel="stylesheet" type="text/css" href="CSS/modal.css">
+	<link rel="stylesheet" type="text/css" href="CSS/resultado.css">
+	
 	<link rel="stylesheet" type="text/css" href="CSS/responsive.css">
 </head>
 <body>
-	<div id="page-home">
+	<div id="page-resultado">
 		
 		<div class="content">
 		<header>
 			<img src="icones/logo.svg" alt="Logomarca">
-			<a href="cadastro.html">
+			<a href="index.html">
 				<span></span>
-				Cadastre um ponto de coleta</a>
+				Voltar para home</a>
 		</header>
 		<main>
-			<h1>Seu marketplace de coleta de resíduos</h1>
-
-			<p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente.</p>
-			<a id="pesquisar" href="#">
-				<span></span>
-				<strong>Pesquisar pontos de coleta</strong>
-			</a>
+			<h4>
+				<strong>2 pontos</strong> encontrados
+			</h4>
 			
-		</main>
-		</div>
-	</div>
-
-	<div id="modal">
-		<div class="content">
-			<div class="header">
-				<h1>Pontos de Coleta</h1>
-				<a id="fechar" href="#">Fechar</a>	
-			</div>
-			<form action="resultadoBusca.html">
-				<label for="search">Cidade</label>
-				<div class="searchField">
-					<input type="text" name="search" placeholder="Pesquise por cidade">
-					<button>
-						<img src="icones/search.svg" alt="botão">
-					</button>
+			<div class="cards">
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1578133037418-60306423dbc0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Colectoria">
+					<h1>Colectoria</h1>
+					<h3>Residuos eletronicos, lampadas</h3>
+					<p>
+						Esteio,Rio grande do sul <br>
+						Rua santo angelo, <br>
+						nº 345
+					</p>
 				</div>
-			</form>
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1515787366009-7cbdd2dc587b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Papersider">
+					<h1>Papersider</h1>
+					<h3>Papeis e papelão</h3>
+					<p>
+						Esteio,Rio grande do sul <br>
+						Rua santo angelo, <br>
+						nº 345
+					</p>
+				</div>
+			</div>
+		</main>
 		</div>
 	</div>
 
